Alot of fixes, restaurant preferences tab added, other fixes

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=FoodKS
 APP_ENV=local
 APP_KEY=base64:Ig3Ea/Zn+ist7w8GmQiUlTZlSi7OPXqFX4MXNlAHO5Q=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
