--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_DATABASE=foodks
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
@@ -37,10 +37,10 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID=1015350
+PUSHER_APP_KEY=a52f3d5152a64a2feee7
+PUSHER_APP_SECRET=ecc8e61ce9ee123c6cea
+PUSHER_APP_CLUSTER=eu
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
