send email statistics

--- a/.env
+++ b/.env
@@ -26,10 +26,10 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_USERNAME=5d35a6d3a9af08
+MAIL_PASSWORD=f734cc61f205cb
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=info@hajatedera.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
